--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: nnBlog
+email: dennis.as@live.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  Este blog foi criado na intenção de reunir algumas coisas que seu mantenedor aprende durante sua caminhada DBA/Developer.
+baseurl: "/nnblog" # the subpath of your site, e.g. /blog
+url: "https://dennissenner.github.io/nnblog/" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: dennissenner
+github_username:  dennissenner
 
 # Build settings
 markdown: kramdown
