--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: nnBlog
 email: dennis.as@live.com
 description: > # this means to ignore newlines until "baseurl:"
-  Este blog foi criado na intenção de reunir algumas coisas que seu mantenedor aprende durante sua caminhada DBA/Developer.
+  Este blog foi criado na intenção de reunir algumas coisas que seu mantenedor aprende durante sua caminhada DBA.
 baseurl: "/nnblog" # the subpath of your site, e.g. /blog
 url: "https://dennissenner.github.io/nnblog/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: dennissenner
